# my_software_project

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  week1.md
data/: database.sqlite
documentation/: Requirements specification.md  architecture.md  changelog.md  timesheet  timesheet.md
exercises/week2/paymentcard/: pyproject.toml
exercises/week2/paymentcard/src/: paymentcard.py
exercises/week2/paymentcard/src/tests/: paymentcard_test.py
exercises/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
exercises/week3/: HSL.md  monopoly.md
src/: app.py  initialize_database.py
src/entities/: pomodoro.py  stats.py  task.py  user.py
src/repositories/: pomodoro_repository.py  task_repository.py  user_repository.py
src/services/: pomodoro_service.py  task_service.py  user_service.py
src/tests/repositories/: task_repository_test  user_repository_test.py
src/tests/services/: pomodoro_service_test.py  user_service_test.py
