[project]
name = "my-software-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivy-Chen199",email = "yuxin.chen@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pytest = "^8.3.5"
pylint = "^3.3.6"
autopep8 = "^2.3.2"
pytest-dotenv = "^0.5.2"

